# djangotutorial

./: .gitignore  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html  register.html
blog/: context_processors.py  forms.py  models.py  sessions.py  urls.py  validators.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_comment_body.py
blog/templates/blog/: detail.html  draft_comments.html  index.html
contact/: urls.py  views.py
contact/templates/contact/: index.html  success.html
locale/en/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.mo  django.po
mysite/: settings.py  urls.py
mysite/templates/: base.html
mysite/templates/partials/: header.html
polls/: models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html  index.html
subscriptions/: admin.py  models.py  urls.py  views.py  webhooks.py
subscriptions/migrations/: 0001_initial.py  0002_order.py  0003_remove_order_is_paid.py  0004_alter_order_email_alter_order_payment_id.py  0004_order_account.py
subscriptions/templates/subscriptions/: index.html
